--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ http:
 mysql:
   host: 127.0.0.1
   port: 3306
-  database: template
+  database: campus_second-hand
   username: root
   password: 123456
 redis:
