--- a/web/.env.development
+++ b/web/.env.development
@@ -8,5 +8,5 @@ VITE_BASE_PATH = './'
 VITE_AXIOS_BASE_URL = 'http://localhost:8080'
 
 # 开发环境下跨域代理，请输入要跨域的api地址 - 尾部无需带'/'
-# VITE_PROXY_URL = 'http://localhost:8080'
+VITE_PROXY_URL = 'http://localhost:8080'
 # VITE_AXIOS_BASE_URL = 'http://localhost:80'
